--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,54 @@
 attrs==23.1.0
+beautifulsoup4==4.12.2
 certifi==2023.7.22
-charset-normalizer==3.2.0
+charset-normalizer==3.3.1
+cianparser==0.4.28
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
+cloudscraper==1.2.71
 colorama==0.4.6
-cycler==0.11.0
-Fiona==1.9.4.post1
-fonttools==4.38.0
-geopandas==0.10.2
+contourpy==1.1.1
+cycler==0.12.1
+DateTime==5.2
+fiona==1.9.5
+fonttools==4.43.1
+GDAL @ file:///C:/Users/user/Desktop/Projects/PyCharmProjects/venvs_prebuild_libs/GDAL-3.4.3-cp310-cp310-win_amd64.whl
+geographiclib==1.52
+geojson==3.0.1
+geojson-length==0.4.0
+geopandas~=0.12.2
+geopy==2.2.0
 idna==3.4
-importlib-metadata==6.7.0
 kiwisolver==1.4.5
-matplotlib==3.5.3
-networkx==2.6.3
-numpy==1.21.6
-osmnx==1.1.2
-packaging==23.1
-pandas==1.3.5
-Pillow==9.5.0
+lxml==4.9.3
+matplotlib==3.8.0
+networkx==3.2.1
+numpy==1.26.1
+osmnx==1.7.1
+OSMPythonTools==0.3.5
+packaging==23.2
+pandas==2.1.2
+Pillow==10.1.0
 pyparsing==3.1.1
-pyproj==3.2.1
+pyproj==3.6.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
-Rtree==1.0.1
-Shapely==1.8.5.post1
+requests-toolbelt==1.0.0
+scipy==1.11.3
+shapely==2.0.2
 six==1.16.0
-typing-extensions==4.7.1
-urllib3==2.0.4
-zipp==3.15.0
+soupsieve==2.5
+staticmap==0.5.7
+transliterate==1.10.2
+turfpy==0.0.7
+tzdata==2023.3
+ujson==5.8.0
+urllib3==2.0.7
+xarray==2023.10.1
+zope.interface==6.1
+
+estaty~=0.1.0
+contextily~=1.4.0
+dadata~=21.10.1
